force-app/main/default/objects/Parts_Order__c/Parts_Order__c.object-meta.xml
<CustomObject>
    <label>Parts Order</label>
    <nameField>
        <label>Parts Order Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>