force-app/main/default/objects/Parts_Order__c/fields/AMOS_Order_No__c.field-meta.xml
<CustomField>
    <fullName>AMOS_Order_No__c</fullName>
    <externalId>true</externalId>
    <label>AMOS Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>