force-app/main/default/objects/Parts_Order__c/fields/AMOSDealerCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSDealerCode__c</fullName>
    <label>AMOSDealerCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>