force-app/main/default/objects/Parts_Order__c/fields/AMOSMOBIS_Suffix__c.field-meta.xml
<CustomField>
    <fullName>AMOSMOBIS_Suffix__c</fullName>
    <label>AMOSMOBIS Suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>