force-app/main/default/objects/Parts_Order__c/fields/AMOSMOBISSuffix__c.field-meta.xml
<CustomField>
    <fullName>AMOSMOBISSuffix__c</fullName>
    <label>AMOSMOBISSuffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>