force-app/main/default/objects/Parts_Order__c/fields/AMOSOrderNo__c.field-meta.xml
<CustomField>
    <fullName>AMOSOrderNo__c</fullName>
    <externalId>true</externalId>
    <label>AMOSOrderNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>