force-app/main/default/objects/Parts_Order__c/fields/coDate__c.field-meta.xml
<CustomField>
    <fullName>coDate__c</fullName>
    <label>coDate</label>
    <type>Date</type>
</CustomField>