force-app/main/default/objects/Parts_Order__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <label>Confirmed Date</label>
    <type>Date</type>
</CustomField>