force-app/main/default/objects/Parts_Order__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Parts Order</relationshipLabel>
    <relationshipName>Parts_Order</relationshipName>
    <type>Lookup</type>
</CustomField>