force-app/main/default/objects/Parts_Order__c/fields/DepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCode__c</fullName>
    <label>DepartmentCode__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>