force-app/main/default/objects/Parts_Order__c/fields/IsOrderRequested__c.field-meta.xml
<CustomField>
    <fullName>IsOrderRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOrderRequested</label>
    <type>Checkbox</type>
</CustomField>