force-app/main/default/objects/Parts_Order__c/fields/OrderNoCXP__c.field-meta.xml
<CustomField>
    <fullName>OrderNoCXP__c</fullName>
    <label>OrderNoCXP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>