force-app/main/default/objects/Parts_Order__c/fields/OrderRecieveDate__c.field-meta.xml
<CustomField>
    <fullName>OrderRecieveDate__c</fullName>
    <label>OrderRecieveDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>