force-app/main/default/objects/Parts_Order__c/fields/OrderRefNo__c.field-meta.xml
<CustomField>
    <fullName>OrderRefNo__c</fullName>
    <label>OrderRefNo</label>
    <length>6</length>
    <type>Text</type>
</CustomField>