force-app/main/default/objects/Parts_Order__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>OrderType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock Order</fullName>
            </value>
            <value>
                <fullName>Emergency Order</fullName>
            </value>
            <value>
                <fullName>Accessory Order</fullName>
            </value>
            <value>
                <fullName>Campaign Order</fullName>
            </value>
            <value>
                <fullName>SST Order</fullName>
            </value>
            <value>
                <fullName>Market Support</fullName>
            </value>
            <value>
                <fullName>Claim Order</fullName>
            </value>
            <value>
                <fullName>Direct Takeout</fullName>
            </value>
            <value>
                <fullName>AM Order</fullName>
            </value>
            <value>
                <fullName>Wholesale Order</fullName>
            </value>
            <value>
                <fullName>Direct Purchasing Order</fullName>
            </value>
            <value>
                <fullName>Initial Order</fullName>
            </value>
            <value>
                <fullName>Book/EPC Order</fullName>
            </value>
            <value>
                <fullName>Accident Vehicle Support</fullName>
            </value>
            <value>
                <fullName>Oil Order</fullName>
            </value>
            <value>
                <fullName>Quotation Order</fullName>
            </value>
            <value>
                <fullName>Award Order</fullName>
            </value>
            <value>
                <fullName>Promotion Order</fullName>
            </value>
            <value>
                <fullName>VOR Order</fullName>
            </value>
            <value>
                <fullName>Warranty Order</fullName>
            </value>
            <value>
                <fullName>Taxi Order</fullName>
            </value>
            <value>
                <fullName>Vendor Direct Shipment Order</fullName>
            </value>
            <value>
                <fullName>D/C Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>