force-app/main/default/objects/Parts_Order__c/fields/Parts_Manager__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parts_Order</relationshipName>
    <type>Lookup</type>
</CustomField>