force-app/main/default/objects/Parts_Order__c/fields/Parts_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order_Number__c</fullName>
    <displayFormat>PO-{00000}</displayFormat>
    <label>Parts Order Number</label>
    <type>AutoNumber</type>
</CustomField>