force-app/main/default/objects/Parts_Order__c/fields/ProductRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductRequestNumber__c</fullName>
    <label>ProductRequestNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>